--- a/style.css
+++ b/style.css
@@ -48,7 +48,11 @@ body {
   align-content: center;
 }
 .main {
+  /* display: flex; */
+  position: relative;
+  justify-content: center;
   display: flex;
+  overflow: hidden;
 }
 .content {
   /* background-color: #e3e9ff; */
@@ -59,6 +63,7 @@ body {
   /* padding-top: 50px; */
   padding: 15px 15px 15px 15px;
   margin: 0;
+  /* margin-left: 25px; */
 }
 
 .sidebar {
@@ -71,6 +76,7 @@ body {
   /* display: inline-block; */
   /* margin-left: -4px; */
   flex-direction: column;
+  display: none;
 }
 
 .card-order {
@@ -95,9 +101,19 @@ body {
 
 .card-order p {
   padding: 10px;
-  font-size: 18px;
+  font-size: 17px;
+  width: 70%;
   font-weight: 500;
   color: #4e4e4e;
+  text-align: left;
+}
+
+.card-order span {
+  padding: 10px;
+  font-size: 17px;
+  font-weight: 500;
+  color: #4e4e4e;
+  width: 1%;
 }
 
 .card-order button {
